--- a/index.html
+++ b/index.html
@@ -5,10 +5,52 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-  <script src='main.js'></script>
+  <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='global.css'>
+  <script src='index.js' defer></script>
 </head>
 <body>
-  
+
+  <header class="header">
+    <nav class="nav">
+      <img src="img/logo.png" alt="logo" class="nav-logo">
+      <ul class="nav-options">
+        <li class="nav-option"><a href='characterForm.html' target="_top">Descubrete</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="landing-content">
+    <section class="lading-presentation-screen">
+      <div>
+        <h1 class="lading-presentation-tittle">Descubrete en el universo de</h1>
+        <img src="images/logo_rick_and_morthy.png" alt="Imagen del itulo de rick y morthy">
+      </div>
+      <div>
+        <button class="lading-presentation-button" id="lading-presentation-button">Continuar</button>
+      </div>
+    </section>
+
+    <section class="lading-aboutus-screeen">
+      <div class="lading-aboutus-description">
+        <h2 class="lading-aboutus-tittle">
+          ¿Quienes somos?
+        </h2>
+        <p>
+          Somos un grupo de personas que nos encanta la serie de Rick y Morthy, y queremos que tu tambien la disfrutes, por eso hemos creado este formulario, el cuál, según tus preferencias y gustos, te ayudará a descubrir tu personaje.
+        </p>
+        <a href="characterForm.html" target="_top">
+          <button class="lading-aboutus-form-button">
+            Realizar el formulario
+          </button>
+        </a>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+
+  </footer>
 </body>
 </html>
