--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
-  <link rel='stylesheet' type='text/css' media='screen' href='global.css'>
+  <link rel="icon" href="images/icons8-rick-sanchez.svg" type="image/x-icon">
+  <link rel='stylesheet' type='text/css' media='screen' href='/styles/global.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='/styles/index.css'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
   <script src='index.js' defer></script>
 </head>
 <body>
 
   <header class="header">
     <nav class="nav">
-      <img src="img/logo.png" alt="logo" class="nav-logo">
+      <img class="header-logo" src="images/icons8-rick-sanchez.svg" alt="logo" class="nav-logo">
       <ul class="nav-options">
         <li class="nav-option"><a href='characterForm.html' target="_top">Descubrete</a></li>
       </ul>
