--- a/characterForm.html
+++ b/characterForm.html
@@ -5,14 +5,14 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='global.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='/styles/global.css'>
   <script src='index.js' defer></script>
 </head>
 <body>
 
   <header class="header">
     <nav class="nav">
-      <img src="img/logo.png" alt="logo" class="nav-logo">
+      <img src="images/icons8-rick-sanchez.svg" alt="logo" class="nav-logo">
       <ul class="nav-options">
         <li class="nav-option"><a href='index.html' target="_top">Pricnipal</a></li>
       </ul>
