--- a/characterForm.html
+++ b/characterForm.html
@@ -15,14 +15,14 @@
     <nav class="nav">
       <img src="images/icons8-rick-sanchez.svg" alt="logo" class="nav-logo">
       <ul class="nav-options">
-        <li class="nav-option"><a href='index.html' target="_top">Pricnipal</a></li>
+        <li class="nav-option"><a href='index.html' target="_top">Principal</a></li>
       </ul>
     </nav>
   </header>
 
   <main class="page-content">
-
     <form class="page-content-form" action="">
+      <h2 class="form-title">Descubriendo tu personaje</h2>
       <input type="text" placeholder="Cuál es tu nombre?">
       <input type="number" placeholder=" Cuál es tu edad?">
       <div>
@@ -38,8 +38,11 @@
         <option value="Humano">Humano</option>
         <option value="Alien">Alien</option>
       </select>
+      <button class="form-btn">Aceptar</button>
     </form>
-
+    <div class="image-div">
+      <img src="./images/rick.png" alt="">
+    </div>
   </main>
 
   <footer>
