--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="lading-presentation-screen">
       <div>
         <h1 class="lading-presentation-tittle">Descubrete en el universo de</h1>
-        <img src="images/logo_rick_and_morthy.png" alt="Imagen del itulo de rick y morthy">
+        <img src="images/logo_rick_and_morthy-removebg-preview.png" alt="Imagen del itulo de rick y morthy">
       </div>
       <div>
         <button class="lading-presentation-button" id="lading-presentation-button">Continuar</button>
@@ -48,6 +48,9 @@
             Realizar el formulario
           </button>
         </a>
+      </div>
+      <div class="lading-aboutus-image">
+        <img src="images/rym_aboutus.png" alt="Imagen de rick">
       </div>
     </section>
 
