Landing Page vFinal

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
   <main class="landing-content">
     <section class="lading-presentation-screen">
-      <div>
-        <h1 class="lading-presentation-tittle">Descubrete en el universo de</h1>
+      <div class="lading-presentation-content">
         <img src="images/logo_rick_and_morthy-removebg-preview.png" alt="Imagen del itulo de rick y morthy">
+        <!-- <h1 class="lading-presentation-tittle">Sumergete en su universo</h1> -->
+        <span class="landing-page-authors">Desarrolladores: <a href="">Jimmy Giraldo</a> y <a href="">Pablo Gonzalez</a></span>
       </div>
       <div>
         <button class="lading-presentation-button" id="lading-presentation-button">Continuar</button>
@@ -42,7 +43,10 @@
           ¿Quienes somos?
         </h2>
         <p>
-          Somos un grupo de personas que nos encanta la serie de Rick y Morthy, y queremos que tu tambien la disfrutes, por eso hemos creado este formulario, el cuál, según tus preferencias y gustos, te ayudará a descubrir tu personaje.
+          Somos apasionados de la serie <mark>"Rick y Morty"</mark> y queremos compartir esa emoción contigo. Hemos diseñado un formulario único que, a través de tus preferencias y gustos, <mark>te guiará hacia la identificación de tu personaje favorito</mark> en esta fascinante serie. Sumérgete en nuestro universo dedicado a la diversión y la singularidad de "Rick y Morty", donde cada respuesta te acerca más a descubrir quién sería tu compañero de aventuras ideal.
+        </p>
+        <p>
+          ¡No te pierdas la oportunidad de explorar este emocionante mundo con nosotros y encontrar el personaje que mejor se adapte a tu estilo y personalidad!
         </p>
         <a href="characterForm.html" target="_top">
           <button class="lading-aboutus-form-button">
@@ -50,9 +54,61 @@
           </button>
         </a>
       </div>
-      <div class="lading-aboutus-image">
-        <img src="images/rym_aboutus.png" alt="Imagen de rick">
+      <div>
+        <div class="lading-aboutus-image1">
+        </div>
+        <div class="lading-aboutus-image2"> 
+        </div>
       </div>
+    </section>
+
+    <section class="landing-introduction-screen">
+
+      <div class="landing-introduction-def">
+        <h3 class="landing-introduction-def-tittle">¿Qué es Rick y Morty?</h3>
+        <p>
+        Rick y Morty es una serie de televisión estadounidense de animación para adultos <mark>creada por Justin Roiland y Dan Harmon en 2013 para Adult Swim</mark>, 
+        también se emitió en Cartoon Network. La serie sigue las desventuras de un científico, Rick Sánchez, y su fácilmente influenciable nieto, Morty, 
+        quienes pasan el tiempo entre la vida doméstica y los Viajes espaciales e intergalácticos.
+        </p>
+
+        De hecho, uno de los más grandes críticos de las series animadas se atrevió a decir lo siguiente:
+            <blockquote class="landing-introduction-quote"
+            cite="http://servidor.com/referencia">
+                <p>"Rick y Morty es la mejor serie animada que he visto."</p>
+                <p class="author">Jimmy Dev</p>
+            </blockquote>
+        <p>
+          Por si te quedas con las ganas, puedes ver algunos capítulos de la serie <a href="https://www.justwatch.com/mx/serie/rick-and-morty"
+          hreflang="es"
+          target="_blank">aquí!</a>, o puedes llenar la siguiente encuesta para descubrir más sobre la serie.
+        </p>
+        <a href="/serieForm.html" target="_top">
+          <button class="landing-introduction-button">
+            Realizar la encuesta
+          </button>
+        </a>
+      </div>
+
+      <div class="landing-introduction-data">
+        <h3 class="landing-introduction-data-tittle">
+            5 razones para empezar a ver Rick y Morty
+        </h3>
+        <p>
+            Las series animadas para adultos <strong>se encuentran en un limbo extraño</strong> entre lo exageradamente real y las dudas sobre cuántos chistes obscenos puedes
+            hacer antes de que la gente piense que has ido demasiado lejos.
+        </p>
+        <p>Rick y Morty ha alcanzado la perfección en este aspecto, <mark>se olvida por completo de la lógica tradicional para dar vida a un universo tan caótico
+          como lleno de vida.</mark> A continuación les detallamos por qué esta serie es una de las joyas más destacadas de los últimos tiempos:</p>
+        <ol>
+          <li>Es como si Volver al futuro y Los Simpsons tuvieran un hijo grosero</li>
+          <li>No importa la secuencia en que veas a la serie. Puedes ver los capítulos de forma aleatoria.</li>
+          <li>El lado humano de los personajes es de gran importancia.</li>
+          <li>El trabajo de las voces es impecable y muy inmersivo.</li>
+          <li>La creatividad de sus guiones no tiene límites.</li>
+      </ol>
+    </div>
+
     </section>
 
   </main>
