--- a/serieForm.html
+++ b/serieForm.html
@@ -5,19 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de fan</title>
     <link rel="stylesheet" href="./styles/serieForm.css">
+    <link rel="stylesheet" href="/styles/global.css">
 </head>
 <body>
     <main class="main-content">
-        <form class="serie-form" method="post" action="baseurl/...">
+        <img class="logo" src="images/logo_rick_and_morthy.png" alt="Imagen del itulo de rick y morthy">
+        <form class="serie-form" method="get" action="thanks.html">
             <input type="text" placeholder="Ingresa tu nombre">
             <label for="nacimiento">Fecha de nacimiento</label>
             <input id="nacimiento" type="date" value="2000-01-01" min="1950-01-01" max="2017-01-01" step="1">
             <label for="calificacion">Del 1 al 5, ¿Qué tanto te gusta Rick and Morty?</label>
-            <input id="calificacion" type="range" value="1" min="1" max="5" step="1" oninput="this.nextElementSibling.value = this.value"> <output>1</output>
+            <div>
+                <input id="calificacion" type="range" value="1" min="1" max="5" step="1" oninput="this.nextElementSibling.value = this.value">
+                <output>1</output>
+            </div>
             <label for="genero">¿Perteneces a la dimension c-137?</label>
-            <input type="radio" name="c-137" id="si" value="si">SI
-            <input type="radio" name="c-137" id="no" value="no">NO
-            <input type="radio" name="c-137" id="no_se" value="no_se">NO ESTOY SEGURO
+            <div class="div-radio">
+                <input type="radio" name="c-137" id="si" value="si"><span>SI</span>
+                <input type="radio" name="c-137" id="no" value="no"><span>NO</span>
+                <input type="radio" name="c-137" id="no_se" value="no_se">NO ESTOY SEGURO
+            </div>
             <label for="color">Trata de encontrar el color azul más cercano al de Rick y Morty</label>
             <input type="color" name="colorinput" id="colorinput" value="#000000">
             <label for="wallpaper">Estamos recolectando wallpapers sobre Rick y Morty, ¿tienes alguno?</label>
@@ -38,7 +45,7 @@
                 <option value="Morty Jr"></option>
                 <option value="Mr. Goldenfold"></option>
             </datalist>
-            
+            <button>Enviar encuesta</button>
         </form>
     </main>
 </body>
