--- a/characterForm.html
+++ b/characterForm.html
@@ -22,7 +22,7 @@
 
   <main class="page-content-screen">
     <section class="page-content">
-      <form class="page-content-form" action="">
+      <form class="page-content-form" method="get" action="./characterResult.html">
         <h2 class="form-title">Descubriendo tu personaje</h2>
         <input type="text" placeholder="Cuál es tu nombre?">
         <input type="number" placeholder=" Cuál es tu edad?">
