--- a/characterResult.html
+++ b/characterResult.html
@@ -6,6 +6,7 @@
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='/styles/global.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='/styles/characterResult.css'>
   <script src='index.js' defer></script>
 </head>
 <body>
@@ -22,11 +23,44 @@
   <main class="results-page">
 
     <section class="results-character">
-      
+      <div class="results-character-data">
+        <h2 class="results-character-tittle">Personaje obetnido</h2>
+        <section class="results-character-image">
+          <!-- <img src="images/rym_character.jpeg" alt="Imagen de personaje"> -->
+        </section>
+        <h2 class="results-user-name">Pablo Gonzalez</h2>
+        <p class="results-character-name">Mr. Benson</p>
+      </div>
+      <section class="results-character-info">
+        <h2 class="results-character-info-tittle">Caracteristicas y datos</h2>
+        <div class="results-character-single-data">
+          <span>Estado:</span>
+          <p>Vivo</p>
+        </div>
+        <div class="results-character-single-data">
+          <span>Espcie:</span>
+          <p>Humano</p>
+        </div>
+        <div class="results-character-single-data">
+          <span>Genero:</span>
+          <p>Masculino</p>
+        </div>
+        <div class="results-character-single-data">
+          <span>Ubicación:</span>
+          <p>Planeta Tierra</p>
+        </div>
+        <div class="results-character-single-data">
+          <span>Origen</span>
+          <p>Planeta Tierra</p>
+        </div>
+      </section>
     </section>
 
     <section class="results-recommended-episodes">
-
+      <h2 class="results-recommended-episodes-tittle">Episodios recomendados</h2>
+      <div class="episode-recomendation"></div>
+      <div class="episode-recomendation"></div>
+      <div class="episode-recomendation"></div>
     </section>
 
   </main>
