--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Page Title</title>
+  <title>RYM Universe</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel="icon" href="images/icons8-rick-sanchez.svg" type="image/x-icon">
   <link rel='stylesheet' type='text/css' media='screen' href='/styles/global.css'>
@@ -28,8 +28,13 @@
   <main class="landing-content">
     <section class="lading-presentation-screen">
       <div class="lading-presentation-content">
+        <h2>
+          Bienvenido al
+        </h2>
         <img src="images/logo_rick_and_morthy-removebg-preview.png" alt="Imagen del itulo de rick y morthy">
-        <!-- <h1 class="lading-presentation-tittle">Sumergete en su universo</h1> -->
+        <h2>
+          Universe
+        </h2>
         <span class="landing-page-authors">Desarrolladores: <a href="">Jimmy Giraldo</a> y <a href="">Pablo Gonzalez</a></span>
       </div>
       <div>
