--- a/serieForm.html
+++ b/serieForm.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <main class="main-content">
-        <img class="logo" src="images/logo_rick_and_morthy.png" alt="Imagen del itulo de rick y morthy">
+        <div class="back-container" >
+            <a href="/index.html" target="_top"><img class="back-img" src="/images/previous.png" alt="back img"></a>
+        </div>
+        <img class="logo" src="images/logo_rick_and_morthy-removebg-preview.png" alt="Imagen del itulo de rick y morthy">
         <form class="serie-form" method="get" action="thanks.html">
+            <h1>Formulario de fans</h1>
             <input type="text" placeholder="Ingresa tu nombre">
             <label for="nacimiento">Fecha de nacimiento</label>
             <input id="nacimiento" type="date" value="2000-01-01" min="1950-01-01" max="2017-01-01" step="1">
