final touches for project

--- a/serieForm.html
+++ b/serieForm.html
@@ -12,7 +12,7 @@
         <div class="back-container" >
             <a href="/index.html" target="_top"><img class="back-img" src="/images/previous.png" alt="back img"></a>
         </div>
-        <img class="logo" src="images/logo_rick_and_morthy-removebg-preview.png" alt="Imagen del itulo de rick y morthy">
+        <img class="logo" src="images/logo_rick_and_morthy-removebg-preview.png" alt="Imagen del titulo de rick y morty">
         <form class="serie-form" method="get" action="thanks.html">
             <h1>Formulario de fans</h1>
             <input type="text" placeholder="Ingresa tu nombre">
