--- a/characterResult.html
+++ b/characterResult.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Page Title</title>
+  <title>Resultado</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='/styles/global.css'>
   <link rel='stylesheet' type='text/css' media='screen' href='/styles/characterResult.css'>
@@ -15,7 +15,7 @@
     <nav class="nav">
       <img src="images/icons8-rick-sanchez.svg" alt="logo" class="nav-logo">
       <ul class="nav-options">
-        <li class="nav-option"><a href='index.html' target="_top">Pricnipal</a></li>
+        <li class="nav-option"><a href='index.html' target="_top">Principal</a></li>
       </ul>
     </nav>
   </header>
@@ -58,13 +58,19 @@
 
     <section class="results-recommended-episodes">
       <h2 class="results-recommended-episodes-tittle">Episodios recomendados</h2>
-      <div class="episode-recomendation"></div>
-      <div class="episode-recomendation"></div>
-      <div class="episode-recomendation"></div>
+      <iframe class=".episode-recomendation" src="https://www.youtube.com/embed/hl1U0bxTHbY">
+      </iframe>
+      <iframe class=".episode-recomendation" src="https://www.youtube.com/embed/jerFRSQW9g8?si=0jisepgIvwTly9MP">
+      </iframe>
+      <iframe class=".episode-recomendation" src="https://www.youtube.com/embed/58-gZTQ36LU">
+      </iframe>
     </section>
-
+    <div>
+      <a href="/index.html" target="_top">
+        <button>Volver</button>
+      </a>
+    </div>
   </main>
-
   <footer>
 
   </footer>
